--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,26 +1,33 @@
 .features{
     
-    grid-row: 2/3;
+    // grid-row: 2/3;
     grid-column: center-start/ center-end;
     margin: 15rem 0;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
+    align-items: start; 
 
     .feature{
-        // display: grid;
-        // grid-template-columns: min-content 1fr; 
-        // grid-template-rows: auto auto;
+        display: grid;
+        grid-template-columns: min-content 1fr; 
+        grid-template-rows: auto auto;
+        grid-row-gap: 1.5rem;
+        grid-column-gap: 2rem;
+         
 
         &__icon{
             fill: $color-primary;
             width: 4.5rem;
             height: 4.5rem; 
+            grid-row: 1/span 2;
+            transform: translateY(-1rem);
         }
         &__text{
             font-size: 1.7rem;
-            
+            // grid-column: 1/span 2;
+            // grid-row: 2/3;
         }
     }
 }
