--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,10 +3,43 @@
         background-color: $color-primary-dark;
         grid-row: 3/4;
         grid-column: full-start/ col-end 4;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
+        background-size: cover;
+        
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(6, 1fr);
+        align-items: center;
     }
+    &__img--1{
+        width: 100%;
+        grid-column: 2/6;
+        grid-row: 2/6;
+        box-shadow: 0 2rem 5rem rgba(0,0,0, .1);
+     }
+    &__img--2{
+        width: 115%;
+        grid-column: 4/7;
+        grid-row: 4/6;
+        margin-right: -3rem;
+        z-index: 2;
+        box-shadow: 0 2rem 5rem rgba(0,0,0, .3);
+    }
+
     &__content{
-        background-color: $color-primary;
         grid-row: 3/4;
         grid-column: col-start 5/ full-end;
+        padding: 6rem 8vw;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        
+    }
+    &__text{
+        font-size: 1.5rem;
+        font-style: italic;
+        margin-bottom: 4rem;
     }
 }
