--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,5 +1,86 @@
 .homes{
-    background-color: $color-secondary;
     grid-row: 4/5;
     grid-column: center-start/ center-end;
+    padding: 15rem 0;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 7rem;
+}
+
+.home{
+    background-color: $color-grey-light-1;
+
+    display: grid;
+    grid-row-gap: 3.5rem;
+    grid-template-columns: repeat(2, 1fr);
+
+
+
+    &__img{
+        width: 100%;
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        
+    }
+    &__like{
+        grid-column: 2/3;
+        grid-row: 1/-1;
+        z-index: 2;
+        justify-self: end;
+        margin: 1rem;
+    }
+
+    svg.home__like {
+        width: 2rem;
+        height: 2rem;
+        fill: $color-primary;
+    }
+
+    &__name{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        z-index: 2;
+        align-self: end;
+        transform: translateY(50%);
+
+        font-family: $font-display;
+        font-size: 1.6rem;
+        text-align: center;
+        padding: 1.25rem;
+        background-color: $color-secondary;
+        color: #fff;
+        font-weight: 400;
+        width: 80;
+        justify-self: center;
+    }
+   
+    &__location,
+    &__rooms{
+        margin-top: 2.5rem;
+    }
+   
+    &__location,
+    &__rooms,
+    &__like,
+    &__area,
+    &__price{
+        font-size: 1.5rem;
+        margin-left: 2rem;
+        display: flex;
+        align-items: center;
+        // justify-content: center;
+
+        svg{
+            width: 2rem;
+            height: 2rem;
+            fill: $color-primary;
+            margin-right: 1rem;
+        }
+       
+    }
+    
+    &__btn{
+        grid-column: 1/-1;
+    }
 }
