--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,4 +2,26 @@
     background-color: $color-primary;
     grid-row: 1/ -1;
     grid-column: [sidebar-start]/ [sidebar-end];
+    display: flex;
+    justify-content: center;
+}
+.nav-btn{
+    border: none;
+    border-radius: none;
+    margin-top: 4rem;
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    
+
+    &::before,
+    &::after{
+        content: '';
+        display: block;
+        background-color: #fff;
+        height: 2px;
+        width: 4.5rem;
+    }
+    &::before{transform: translateY(-1.5rem);}
+    &::after{transform: translateY(1.5rem);}
 }
